plugins {
	id 'org.springframework.boot' version '2.1.8.RELEASE'
	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
	id 'java'
}

group = 'com.ndovel'
version = '1.4.1-SNAPSHOT'
sourceCompatibility = '11'

repositories {

	maven { 
		url 'http://maven.aliyun.com/nexus/content/groups/public/' 
	}
	maven { 
		url 'http://maven.aliyun.com/nexus/content/repositories/jcenter'
	}
	mavenCentral()
}

dependencies {
	implementation 'org.apache.httpcomponents:httpclient:4.5.9'

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'io.jsonwebtoken:jjwt:0.9.1'
	implementation 'org.jsoup:jsoup:1.12.1'
	implementation 'org.apache.commons:commons-text:1.8'
	implementation 'com.auth0:java-jwt:3.8.3'

	compileOnly 'org.springframework.boot:spring-boot-configuration-processor'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'mysql:mysql-connector-java'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
}
